Fix overflow issue

--- a/packages/components/organisms/f-header/src/assets/scss/navigation.scss
+++ b/packages/components/organisms/f-header/src/assets/scss/navigation.scss
@@ -121,6 +121,7 @@ $nav-container-height--narrow      : 56px;
     }
 
     @include f.media('<=mid') {
+        display: flex;
         flex-direction: column;
     }
 }
